--- a/sunshinewear/build.gradle
+++ b/sunshinewear/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "25.0.1"
 
     defaultConfig {
-        applicationId "wear.sai.com.sunshine"
+        applicationId "com.example.android.sunshine"
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
